modified labs 1 to 5

--- a/01-elecstat.tex
+++ b/01-elecstat.tex
@@ -107,7 +107,7 @@ Your instructor will have demonstrated charging the electroscope by induction--t
 \newpage
 \section{Questions}
 
-Discuss briefly whether or not your observations today give you any information on the following aspects of Coulomb's law.  Describe which activity or activities provided the information. Use the data you gathered in the induction section to make a plot of displacement against distance between the charged rod and ball.
+\todo{Added `explanatory' proportionality force equations.}Discuss briefly whether or not your observations today give you any information on the following aspects of Coulomb's law.  Describe which activity or activities provided the information. Use the data you gathered in the induction section to make a plot of displacement against distance between the charged rod and ball.
 \begin{enumerate}
 	\item Coulomb force acts at a distance.\marginpar{$F \propto r$}
 	\item Coulomb force is inversely proportional to distance. \marginpar{$F \propto r^{-1}$}
@@ -119,6 +119,7 @@ Discuss briefly whether or not your observations today give you any information 
 %--------------------------------------------------------------------------
 %\vfill
 \vskip10em
+\todo{Reference does not show in list of figures.}
 \begin{figure*}
 %	\centering
 	\includegraphics[width=0.85\textwidth]{triboelectricity.pdf}
