--- a/03-energy.tex
+++ b/03-energy.tex
@@ -92,7 +92,7 @@ By conservation of energy
 \begin{align} 
 \text{electrical energy expended} & = \text{heat gained} \notag \\
 W & = Q \notag \\
-IVt & = m\,c\Delta T \notag
+IV\Delta t & = m\,c\Delta T \notag
 \end{align}
 or
 \begin{equation}
@@ -183,7 +183,7 @@ in $J/cal$ or $kJ/kcal$ by computing the percent error, given by
 %---------------------------------------------------------------------
 \section{Questions}
 \begin{enumerate}
-	\item Estimate the experimental or instrumental uncertainties \marginnote{\[ \frac{\delta V}{V}, \frac{\delta I}{I}, \frac{\delta T}{T}, \frac{\delta m}{m}. \] The $\delta$'s are uncertainties not changes.}
+	\item Estimate the experimental or instrumental uncertainties \marginnote{\[ \frac{\delta V}{V}, \frac{\delta I}{I}, \frac{\delta T}{T}, \frac{\delta m}{m}. \] The $\delta$'s are uncertainties not changes or differences. Most often, they are least counts in the instruments.}
 in reading the voltmeter, ammeter, thermometer, and the balance scale.  Refer to the appendix in this manual for methods of accomplishing this. 
 	\item For a constant current, $I$, how is the joule heat related to the resistance of the heating coil?
 	\item Which method (calorimetry or electric) do you believe is inherently more precise?  Why is this so?  Can you justify this using the uncertainty calculations from question 1?
