--- a/5b-main.tex
+++ b/5b-main.tex
@@ -1,5 +1,6 @@
 % 5b-main.tex
 %	zn: update 2014.02.05. removed \addtocounter{}{} for each chap
+% Seth Hillbrand made Aug 2013 manual revision. tufte-style.
 
 %\listfiles
 %\RequirePackage{snapshot}
@@ -34,6 +35,7 @@
 %
 %\part{Laboratory Experiments}
 
+\listoftodos%[Notes list]
 \mainmatter
 % zn: 2014.02.05 make manual independent of textbook?
 %\openepigraph{%
@@ -51,7 +53,7 @@
 \input{04-dc1}
 %
 %%\addtocounter {lab}{1}
-%\input{05-dc2}
+\input{05-dc2}
 %
 %%\addtocounter {lab}{1}
 %\input{06-induction}
