installed todonotes in previous commit with notes

--- a/02-efield.tex
+++ b/02-efield.tex
@@ -20,7 +20,7 @@ where $\Delta s$ is the change in distance.
 
 This laboratory exercise simulates electrostatic fields produced by static charge distributions\sidenote{\textsc{Static charge distributions} are ones that do not change with time.}.  The situations discussed in the text and in class are for static distributions of charge.  Despite making the mathematics easier, it turns out to be extremely difficult to measure voltages in truly static situations.  
 
-To see why this is the case, imagine applying a constant voltage between two plates and measuring the voltages in between them in a tray of water.  In this case, $+$ and $-$ ions will physically move through the water, distorting your measurement.  One way to overcome this sort of difficulty is to use AC (alternating current), as we do in this exercise.  In this configuration, the electric field oscillates in a controlled manner and your voltmeter measures the \textit{amplitude} of the oscilation.
+To see why this is the case, imagine applying a constant voltage between two plates and measuring the voltages in between them in a tray of water.  In this case, $+$ and $-$ ions will physically move through the water, distorting your measurement.  One way to overcome this sort of difficulty is to use AC (alternating current)\todo{Change 8.9V to 7.6V on plot, which students measure in lab.}, as we do in this exercise.  In this configuration, the electric field oscillates in a controlled manner and your voltmeter measures the \textit{amplitude} of the oscilation.
 \begin{figure}
 	\includegraphics[width=0.85\linewidth]{ACVoltage.pdf}
 	\caption[AC Voltage Level]{What we measure in AC voltage is the Root Mean Squared (RMS) level of voltage between two points.  The DC voltage level oscillates about 0, peaking slightly higher than the AC level will show.  This means that you are measuring an \textit{average} voltage level that will smooth out some of the environmental effects that would be present in a DC measurement.}
